[metadata]
license_files = LICENSE

[bdist_rpm]
release = 1
packager = Forensic artifacts <forensicartifacts@googlegroups.com>
doc_files = ACKNOWLEDGEMENTS
            AUTHORS
            LICENSE
            README
build_requires = python3-setuptools
requires = python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

