[metadata]
name = artifacts
version = 20231223
description = ForensicArtifacts.com Artifact Repository.
long_description = A free, community-sourced, machine-readable knowledge base of forensic artifacts that the world can use both as an information source and within other tools.
long_description_content_type = text/plain
url = https://github.com/ForensicArtifacts/artifacts
maintainer = Forensic artifacts
maintainer_email = forensicartifacts@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  artifacts = artifacts
packages = find:
python_requires = >=3.7
scripts =
  tools/stats.py
  tools/validator.py

[options.package_data]
artifacts.data =
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_rpm]
release = 1
packager = Forensic artifacts <forensicartifacts@googlegroups.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1
