[metadata]
name = artifacts
version = 20251124
description = ForensicArtifacts.com Artifact Repository.
long_description = A free, community-sourced, machine-readable knowledge base of forensic artifacts that the world can use both as an information source and within other tools.
long_description_content_type = text/plain
url = https://github.com/ForensicArtifacts/artifacts
maintainer = Forensic artifacts
maintainer_email = forensicartifacts@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  artifacts = artifacts
packages = find:
python_requires = >=3.10

[options.package_data]
artifacts =
  data/*.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[options.entry_points]
console_scripts =
  stats = artifacts.scripts.stats:Main
  validator = artifacts.scripts.validator:Main
